docs/api/qiskit-ibm-runtime/0.28/qiskit_ibm_runtime.utils.noise_learner_result.LayerError.mdx
---
title: LayerError (v0.28)
description: API reference for qiskit_ibm_runtime.utils.noise_learner_result.LayerError in qiskit-ibm-runtime v0.28
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit_ibm_runtime.utils.noise_learner_result.LayerError
---

# LayerError

<Class id="qiskit_ibm_runtime.utils.noise_learner_result.LayerError" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.28/qiskit_ibm_runtime/utils/noise_learner_result.py#L112-L194" signature="LayerError(circuit, qubits, error)" modifiers="class">
  The error channel (in Pauli-Lindblad format) of a single layer of instructions.

  **Parameters**

  *   **circuit** ([`QuantumCircuit`](/api/qiskit/qiskit.circuit.QuantumCircuit "(in Qiskit v1.2)")) – A circuit whose noise has been learnt.
  *   **qubits** (`Sequence`\[`int`]) – The labels of the qubits in the `circuit`.
  *   **error** ([`PauliLindbladError`](qiskit_ibm_runtime.utils.noise_learner_result.PauliLindbladError "qiskit_ibm_runtime.utils.noise_learner_result.PauliLindbladError")) – The Pauli Lindblad error channel affecting the `circuit`.

  **Raises**

  **ValueError** – If `circuit`, `qubits`, and `error` have mismatching number of qubits.

  ## Attributes

  ### circuit

  <Attribute id="qiskit_ibm_runtime.utils.noise_learner_result.LayerError.circuit">
    The circuit in this `LayerError`.

    **Return type**

    [`QuantumCircuit`](/api/qiskit/qiskit.circuit.QuantumCircuit "(in Qiskit v1.2)")
  </Attribute>

  ### error

  <Attribute id="qiskit_ibm_runtime.utils.noise_learner_result.LayerError.error">
    The error channel in this `LayerError`.

    **Return type**

    [`PauliLindbladError`](qiskit_ibm_runtime.utils.noise_learner_result.PauliLindbladError "qiskit_ibm_runtime.utils.noise_learner_result.PauliLindbladError")
  </Attribute>

  ### generators

  <Attribute id="qiskit_ibm_runtime.utils.noise_learner_result.LayerError.generators">
    (DEPRECATED) The Pauli Lindblad generators of the error channel in this `LayerError`.

    **Return type**

    [`PauliList`](/api/qiskit/qiskit.quantum_info.PauliList "(in Qiskit v1.2)")
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit_ibm_runtime.utils.noise_learner_result.LayerError.num_qubits">
    The number of qubits in this [`LayerError`](#qiskit_ibm_runtime.utils.noise_learner_result.LayerError "qiskit_ibm_runtime.utils.noise_learner_result.LayerError").

    **Return type**

    `int`
  </Attribute>

  ### qubits

  <Attribute id="qiskit_ibm_runtime.utils.noise_learner_result.LayerError.qubits">
    The qubits in this `LayerError`.

    **Return type**

    `List`\[`int`]
  </Attribute>

  ### rates

  <Attribute id="qiskit_ibm_runtime.utils.noise_learner_result.LayerError.rates">
    (DEPRECATED) The Lindblad generator rates of the error channel in this `LayerError`.

    **Return type**

    [`ndarray`](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v2.1)")\[`Any`, [`dtype`](https://numpy.org/doc/stable/reference/generated/numpy.dtype.html#numpy.dtype "(in NumPy v2.1)")\[`float64`]]
  </Attribute>

  ## Methods
</Class>

