docs/api/qiskit-ibm-runtime/0.30/qiskit_ibm_runtime.utils.noise_learner_result.LayerError.mdx
---
title: LayerError (v0.30)
description: API reference for qiskit_ibm_runtime.utils.noise_learner_result.LayerError in qiskit-ibm-runtime v0.30
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit_ibm_runtime.utils.noise_learner_result.LayerError
---

# LayerError

<Class id="qiskit_ibm_runtime.utils.noise_learner_result.LayerError" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.30/qiskit_ibm_runtime/utils/noise_learner_result.py#L136-L262" signature="LayerError(circuit, qubits, error)" modifiers="class">
  The error channel (in Pauli-Lindblad format) of a single layer of instructions.

  **Parameters**

  *   **circuit** ([`QuantumCircuit`](/api/qiskit/qiskit.circuit.QuantumCircuit "(in Qiskit v1.2)")) – A circuit whose noise has been learnt.
  *   **qubits** (`Sequence`\[`int`]) – The labels of the qubits in the `circuit`.
  *   **error** ([`PauliLindbladError`](qiskit_ibm_runtime.utils.noise_learner_result.PauliLindbladError "qiskit_ibm_runtime.utils.noise_learner_result.PauliLindbladError")) – The Pauli Lindblad error channel affecting the `circuit`.

  **Raises**

  **ValueError** – If `circuit`, `qubits`, and `error` have mismatching number of qubits.

  ## Attributes

  ### circuit

  <Attribute id="qiskit_ibm_runtime.utils.noise_learner_result.LayerError.circuit">
    The circuit in this `LayerError`.

    **Return type**

    [`QuantumCircuit`](/api/qiskit/qiskit.circuit.QuantumCircuit "(in Qiskit v1.2)")
  </Attribute>

  ### error

  <Attribute id="qiskit_ibm_runtime.utils.noise_learner_result.LayerError.error">
    The error channel in this `LayerError`.

    **Return type**

    [`PauliLindbladError`](qiskit_ibm_runtime.utils.noise_learner_result.PauliLindbladError "qiskit_ibm_runtime.utils.noise_learner_result.PauliLindbladError")
  </Attribute>

  ### generators

  <Attribute id="qiskit_ibm_runtime.utils.noise_learner_result.LayerError.generators">
    (DEPRECATED) The Pauli Lindblad generators of the error channel in this `LayerError`.

    **Return type**

    [`PauliList`](/api/qiskit/qiskit.quantum_info.PauliList "(in Qiskit v1.2)")
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit_ibm_runtime.utils.noise_learner_result.LayerError.num_qubits">
    The number of qubits in this [`LayerError`](#qiskit_ibm_runtime.utils.noise_learner_result.LayerError "qiskit_ibm_runtime.utils.noise_learner_result.LayerError").

    **Return type**

    `int`
  </Attribute>

  ### qubits

  <Attribute id="qiskit_ibm_runtime.utils.noise_learner_result.LayerError.qubits">
    The qubits in this `LayerError`.

    **Return type**

    `list`\[`int`]
  </Attribute>

  ### rates

  <Attribute id="qiskit_ibm_runtime.utils.noise_learner_result.LayerError.rates">
    (DEPRECATED) The Lindblad generator rates of the error channel in this `LayerError`.

    **Return type**

    [`ndarray`](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v2.1)")\[`Any`, [`dtype`](https://numpy.org/doc/stable/reference/generated/numpy.dtype.html#numpy.dtype "(in NumPy v2.1)")\[`float64`]]
  </Attribute>

  ## Methods

  ### draw\_map

  <Function id="qiskit_ibm_runtime.utils.noise_learner_result.LayerError.draw_map" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.30/qiskit_ibm_runtime/utils/noise_learner_result.py#L212-L254" signature="draw_map(embedding, colorscale='Bluered', color_no_data='lightgray', num_edge_segments=16, edge_width=4, height=500, background_color='white', radius=0.25, width=800)">
    Draw a map view of a this layer error.

    **Parameters**

    *   **embedding** (`Union`\[`Embedding`, [`BackendV2`](/api/qiskit/qiskit.providers.BackendV2 "(in Qiskit v1.2)")]) – An `Embedding` object containing the coordinates and coupling map to draw the layer error on, or a backend to generate an `Embedding` for.
    *   **colorscale** (`str`) – The colorscale used to show the rates of this layer error.
    *   **color\_no\_data** (`str`) – The color used for qubits and edges for which no data is available.
    *   **num\_edge\_segments** (`int`) – The number of equal-sized segments that edges are made of.
    *   **edge\_width** (`float`) – The line width of the edges in pixels.
    *   **height** (`int`) – The height of the returned figure.
    *   **background\_color** (`str`) – The background color.
    *   **radius** (`float`) – The radius of the pie charts representing the qubits.
    *   **width** (`int`) – The width of the returned figure.

    **Return type**

    `Figure`
  </Function>
</Class>

